<resources>
    <string name="app_name">Puzzle</string>
    <string name="slot_play">1</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="new_game">New Game</string>
    <string name="shop">Buy</string>
    <string name="buy">Buy</string>


    <string-array name="size_options">
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>

    </string-array>

</resources>