<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:title="@string/slot_play"
        android:id="@+id/slot_play"
        android:orderInCategory="100"
        app:showAsAction="always">
    </item>
    <item
        android:title="@string/new_game"
        android:id="@+id/action_new_game"
        android:orderInCategory="100"
        app:showAsAction="always"
        android:icon="@drawable/ic_new_game"
        />
    <item
        android:title="@string/shop"
        android:id="@+id/action_shop"
        android:orderInCategory="100"
        app:showAsAction="always"
        android:icon="@drawable/ic_shop"
        />
    <item
        android:title="@string/settings"
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        app:showAsAction="always"
        android:icon="@drawable/ic_settings"
        />
    <item
        android:title="@string/help"
        android:id="@+id/action_help"
        android:orderInCategory="100"
        app:showAsAction="never"
        />


</menu>